# road-surface-damage-monitoring

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/api/routes/: dashboard.py  detection.py
app/core/: database.py  logger.py  redis.py  s3.py
app/schemas/: __init__.py  db_schema.py  detection_schema.py  redis_schema.py
app/services/: inference_service.py  mongo_service.py  redis_service.py  s3_service.py
app/utils/: cleanup.py
ml/notebooks/: training.ipynb
