[project]
name = "final-yr-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "fastapi[standard]>=0.135.1",
    "motor>=3.7.1",
    "python-dotenv>=1.2.2",
    "redis>=7.3.0",
    "ultralytics>=8.4.21",
]
